recursion.cons.occurrences.Occurrences.scala.error
Erreur de compilation :
Occurrences:6: error: type mismatch;
 found   : Int
 required: List[Int]
         return(1 + occurrences(v,l.tail))
                                ^Occurrences:6: error: type mismatch;
 found   : List[Int]
 required: Int
         return(1 + occurrences(v,l.tail))
                                    ^Occurrences:9: error: type mismatch;
 found   : Int
 required: List[Int]
       else {return(occurrences(v,l.tail))}
                                ^Occurrences:9: error: type mismatch;
 found   : List[Int]
 required: Int
       else {return(occurrences(v,l.tail))}
                                    ^