recursion.cons.occurrences.Occurrences.scala.code
def occurrences(l:List[Int], v:Int): Int = {
  if (l==Nil) {return 0}
     else {
       if (l.head==v) {
         return(1 + occurrences(v,l.tail))
         }
     
       else {return(occurrences(v,l.tail))}
     
     }  
}